016 ==> 456604 - Parse "file name timestamp" with template YYYY-MM-DD hh[hH]mm when adjusting time & date.
017 ==> 457022 - digiKam overrides the original raw-image (cr2) as jpg-file after or before a cut and save as new image. Then you have two jpg-files.
018 ==> 457061 - Crash opening any folder on macOS 10.14.
019 ==> 120055 - ALBUMTHUMBS : Allow to use any image managed by digiKam as Tags album thumbnail.
020 ==> 457086 - A request to add our own tag icons.
021 ==> 457153 - Allow for sub-folders to be searched when selecting Scan for faces in Albums.
022 ==> 456833 - No Drag and drop or Open with in showfoto Appimage.
023 ==> 457225 - Make use of existing people tags.
024 ==> 425352 - Cursor is huge and jagged.
025 ==> 333115 - Add tool to fix dust area from lens.
026 ==> 456987 - Open with... not working in AppImage.
027 ==> 457312 - Using customized filename with camera name deletes previous name parts.
028 ==> 457257 - Contextual menu option "rename" does not work.
029 ==> 408586 - digiKam search, thumbnails don't refresh correctly.
030 ==> 457422 - Cannot select items in table view.
031 ==> 457421 - digiKam treats .MOV files differently from .JPG files by creation timestamp in metadata to match local time.
032 ==> 457580 - Not possible to view HEIC files with Swedish charaters in path.
033 ==> 457479 - digiKam does not help the user to enter dates quickly.
034 ==> 457662 - digiKam implodes when run by root because QtWebEngine exits.
035 ==> 457693 - digiKam crashes if trying to delete selection of multiple files.
036 ==> 454676 - Metadata missing from thumbnails after moving more than 30 to 40 images at a time between albums.
037 ==> 457682 - Cut and Paste operations with Tags on many elements gives an unexpected result.
038 ==> 457830 - Can't add Collections from local filesystem.
039 ==> 457896 - In People view, the viewport doesn't scroll to the selected face photo thumbnail when arrow keys or PgUp/PgDn are used.
040 ==> 