@@ -103,8 +103,9 @@ BracketStackList::BracketStackList(QWidget* const parent)
     setIconSize(QSize(64, 64));
     setSelectionMode(QAbstractItemView::SingleSelection);
     setSortingEnabled(true);
-    setAllColumnsShowFocus(true);
     setRootIsDecorated(false);
+    setUniformRowHeights(true);
+    setAllColumnsShowFocus(true);
     setSizePolicy(QSizePolicy::Expanding, QSizePolicy::Expanding);
     setColumnCount(3);
     setHeaderHidden(false);
