@@ -66,4 +66,5 @@ BUGFIXES:
 037 ==> 457682 - Cut and Paste operations with Tags on many elements gives an unexpected result.
 038 ==> 457830 - Can't add Collections from local filesystem.
 039 ==> 457896 - In People view, the viewport doesn't scroll to the selected face photo thumbnail when arrow keys or PgUp/PgDn are used.
-040 ==> 
+040 ==> 457972 - digiKam Crash when select multiple files and add to cue to batch process.
+041 ==> 
